--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "appStarter",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "test": "jest",
@@ -17,17 +17,22 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.1.7",
+    "@react-navigation/stack": "^5.2.14",
     "i18n-js": "^3.5.0",
+    "immer": "^6.0.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-localize": "^1.3.1",
-    "react-native-modalfy": "^1.0.2",
-    "react-native-reanimated": "1.4.0",
+    "react-native-modalfy": "^1.1.3",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-redash": "^12.6.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.7.0",
     "react-native-svg": "^9.13.3",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.4",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "zustand": "^2.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -35,6 +40,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.7.4",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@types/i18n-js": "^3.0.2",
     "@types/jest": "^24.0.24",
     "@types/react": "^16.9.15",
     "@types/react-native": "^0.60.25",
