--- a/template/package.json
+++ b/template/package.json
@@ -1,14 +1,14 @@
 {
   "name": "appStarter",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "test": "jest",
-    "start": "react-native start",
-    "ios": "react-native run-ios",
-    "ra": "react-native run-android",
     "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "ra": "react-native run-android",
     "postinstall": "node ./scripts/silence-recycled-files-warning.js",
     "rca": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && cd .. && react-native run-android",
     "apk": "cd ./android && ./gradlew clean && ./gradlew assembleRelease --stacktrace && open app/build/outputs/apk/release && cd ..",
@@ -16,55 +16,52 @@
     "apk:install": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && ./gradlew installRelease --stacktrace && open app/build/outputs/apk/release && cd .."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.6.3",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.1.7",
-    "@react-navigation/stack": "^5.2.14",
-    "i18n-js": "^3.5.0",
-    "immer": "^6.0.3",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
-    "react-native-gesture-handler": "^1.6.1",
-    "react-native-localize": "^1.3.1",
-    "react-native-modalfy": "^1.1.3",
-    "react-native-reanimated": "^1.8.0",
-    "react-native-redash": "^12.6.1",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.7.0",
-    "react-native-svg": "^9.13.3",
-    "zustand": "^2.2.3"
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/hooks": "^2.6.0",
+    "i18n-js": "^3.8.0",
+    "immer": "^8.0.0",
+    "mitt": "^2.1.0",
+    "react": "16.13.1",
+    "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-localize": "^2.0.1",
+    "react-native-modalfy": "^2.1.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-redash": "^15.11.1",
+    "react-native-svg": "^12.1.0",
+    "zustand": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "@types/i18n-js": "^3.0.2",
-    "@types/jest": "^24.0.24",
-    "@types/react": "^16.9.15",
-    "@types/react-native": "^0.60.25",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-test-renderer": "16.9.1",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
-    "babel-jest": "^24.9.0",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "@types/i18n-js": "^3.0.3",
+    "@types/jest": "^25.2.3",
+    "@types/react": "^17.0.0",
+    "@types/react-native": "^0.63.2",
+    "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
+    "babel-jest": "^25.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-native": "^3.8.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "prettier": "1.19.1",
-    "react-test-renderer": "16.9.0",
-    "typescript": "^3.7.3"
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-native": "^3.10.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "prettier": "^2.2.1",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-test-renderer": "16.13.1",
+    "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "react-native",
