--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -64,5 +64,6 @@
     "babel.config.js",
     "metro.config.js",
     "jest.config.js"
-  ]
+  ],
+  "include": ["node_modules/react-native-redash/lib/typescript/v1/index.d.ts"]
 }
