basic ios appcenter setup

--- a/template/package.json
+++ b/template/package.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/hooks": "^2.6.0",
+    "appcenter": "4.0.0",
+    "appcenter-analytics": "4.0.0",
+    "appcenter-crashes": "4.0.0",
     "i18n-js": "^3.8.0",
     "immer": "^8.0.0",
     "mitt": "^2.1.0",
