Default/empty ts RN template

--- a/template/package.json
+++ b/template/package.json
@@ -3,81 +3,34 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "ts": "yarn tsc",
-    "unit": "yarn jest",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "start": "react-native start",
-    "ra": "react-native run-android",
-    "test": "yarn lint && yarn ts && yarn unit",
-    "lint": "npx eslint '*/**/*.{js, jsx,ts,tsx}' --quiet --fix",
-    "postinstall": "node ./scripts/silence-recycled-files-warning.js",
-    "sign-android": "sh ./scripts/sign-android.sh",
-    "rca": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && cd .. && react-native run-android",
-    "apk": "cd ./android && ./gradlew clean && ./gradlew assembleRelease --stacktrace && open app/build/outputs/apk/release && cd ..",
-    "aab": "cd ./android && ./gradlew clean && ./gradlew bundleRelease --stacktrace && open app/build/outputs/bundle/release && cd ..",
-    "apk:install": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && ./gradlew installRelease --stacktrace && open app/build/outputs/apk/release && cd .."
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
-  "pre-commit": [
-    "test"
-  ],
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
-    "@react-native-community/hooks": "^2.6.0",
-    "appcenter": "4.0.0",
-    "appcenter-analytics": "4.0.0",
-    "appcenter-crashes": "4.0.0",
-    "i18n-js": "^3.8.0",
-    "immer": "^8.0.0",
-    "mitt": "^2.1.0",
     "react": "16.13.1",
-    "react-native": "0.63.3",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-localize": "^2.0.1",
-    "react-native-modalfy": "^2.1.0",
-    "react-native-reanimated": "^1.13.2",
-    "react-native-redash": "^14.2.4",
-    "react-native-svg": "^12.1.0",
-    "zustand": "^3.2.0"
+    "react-native": "0.63.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
-    "@types/hoist-non-react-statics": "^3.3.1",
-    "@types/i18n-js": "^3.0.3",
     "@types/jest": "^25.2.3",
-    "@types/react": "^17.0.0",
-    "@types/react-is": "^17.0.0",
     "@types/react-native": "^0.63.2",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-native": "^3.10.0",
-    "eslint-plugin-standard": "^5.0.0",
+    "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "pre-commit": "^1.2.2",
-    "prettier": "^2.2.1",
-    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "react-native",
-    "setupFiles": [
-      "./node_modules/react-native-gesture-handler/jestSetup.js"
-    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
