--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "appStarter",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "ts": "yarn tsc",
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "ra": "react-native run-android",
     "test": "yarn lint && yarn ts && yarn unit",
-    "lint": "npx eslint '*/**/*.{js, jsx,ts,tsx}' --quiet --fix",
+    "lint": "npx eslint '*/**/*.{js,jsx,ts,tsx}' --fix",
     "postinstall": "node ./scripts/silence-recycled-files-warning.js",
     "sign-android": "sh ./scripts/sign-android.sh",
     "rca": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && cd .. && react-native run-android",
@@ -44,6 +44,8 @@
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@testing-library/jest-native": "^3.4.3",
+    "@testing-library/react-native": "^7.1.0",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/i18n-js": "^3.0.3",
     "@types/jest": "^25.2.3",
@@ -66,6 +68,7 @@
     "eslint-plugin-react-native": "^3.10.0",
     "eslint-plugin-standard": "^5.0.0",
     "jest": "^25.1.0",
+    "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "^0.59.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.2.1",
@@ -75,8 +78,13 @@
   },
   "jest": {
     "preset": "react-native",
+    "automock": false,
     "setupFiles": [
+      "./jest.setup.js",
       "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
     ],
     "moduleFileExtensions": [
       "ts",
