--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -60,6 +60,7 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
+  "include": ["**/*"],
   "exclude": [
     "node_modules",
     "babel.config.js",
