--- a/template/ios/appStarter.xcodeproj/xcshareddata/xcschemes/PROD Release.xcscheme
+++ b/template/ios/appStarter.xcodeproj/xcshareddata/xcschemes/PROD Release.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1130"
+   LastUpgradeVersion = "1230"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,36 +14,26 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "appStarter-tvOS.app"
-               BlueprintName = "appStarter-tvOS"
+               BlueprintIdentifier = "561E662225BAC97000C14D5B"
+               BuildableName = "PROD.app"
+               BlueprintName = "PROD"
                ReferencedContainer = "container:appStarter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "appStarter-tvOSTests.xctest"
-               BlueprintName = "appStarter-tvOSTests"
-               ReferencedContainer = "container:appStarter.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      buildConfiguration = "Release"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -54,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "appStarter-tvOS.app"
-            BlueprintName = "appStarter-tvOS"
+            BlueprintIdentifier = "561E662225BAC97000C14D5B"
+            BuildableName = "PROD.app"
+            BlueprintName = "PROD"
             ReferencedContainer = "container:appStarter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -71,15 +61,15 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "appStarter-tvOS.app"
-            BlueprintName = "appStarter-tvOS"
+            BlueprintIdentifier = "561E662225BAC97000C14D5B"
+            BuildableName = "PROD.app"
+            BlueprintName = "PROD"
             ReferencedContainer = "container:appStarter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Release">
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
