Implement set-app-icon script 📱

--- a/template/package.json
+++ b/template/package.json
@@ -15,6 +15,7 @@
     "ra": "react-native run-android --variant stagingDebug --appId com.appstarter.staging",
     "ri": "react-native run-ios --scheme 'STAGING Debug'",
     "rca": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && cd .. && yarn ra",
+    "set-app-icon": "react-native set-icon --path",
     "apks": "yarn apk-staging && yarn apk-prod && yarn apk-prod-unsigned",
     "apk-staging": "npx jetify && cd ./android && ./gradlew assembleStagingRelease --stacktrace && open app/build/outputs/apk/staging/release && cd ..",
     "apk-prod": "npx jetify && cd ./android && ./gradlew assembleProdRelease --stacktrace && open app/build/outputs/apk/prod/release && cd ..",
@@ -83,6 +84,7 @@
     "@babel/plugin-proposal-decorators": "^7.13.15",
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@babel/runtime": "^7.13.10",
+    "@bam.tech/react-native-make": "^3.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-hooks": "^5.1.0",
