--- a/template/package.json
+++ b/template/package.json
@@ -46,6 +46,7 @@
     "test-commit"
   ],
   "dependencies": {
+    "@colorfy-software/zfy": "^0.1.3",
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-clipboard/clipboard": "^1.7.0",
     "@react-native-community/hooks": "^2.6.0",
