--- a/template/package.json
+++ b/template/package.json
@@ -47,83 +47,81 @@
   ],
   "dependencies": {
     "@colorfy-software/zfy": "^0.1.3",
-    "@react-native-async-storage/async-storage": "^1.14.1",
-    "@react-native-clipboard/clipboard": "^1.7.0",
+    "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-clipboard/clipboard": "^1.8.4",
     "@react-native-community/hooks": "^2.6.0",
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^6.0.0",
-    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.3",
+    "@react-navigation/stack": "^5.14.5",
     "cross-fetch": "^3.1.4",
-    "date-fns": "^2.18.0",
-    "google-protobuf": "^3.16.0-rc.1",
+    "date-fns": "^2.22.1",
+    "google-protobuf": "^3.17.3",
     "i18n-js": "^3.8.0",
-    "immer": "^9.0.1",
+    "immer": "^9.0.5",
     "mitt": "^2.1.0",
     "react": "17.0.2",
-    "react-native": "^0.64.0",
-    "react-native-device-info": "^8.0.7",
+    "react-native": "^0.64.2",
+    "react-native-device-info": "^8.1.3",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-localize": "^2.0.2",
-    "react-native-modalfy": "^2.1.1",
+    "react-native-localize": "^2.1.1",
+    "react-native-modalfy": "^2.1.2",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-parsed-text": "^0.0.22",
-    "react-native-permissions": "^3.0.1",
+    "react-native-permissions": "^3.0.5",
     "react-native-reanimated": "^1.13.2",
     "react-native-redash": "^14.2.4",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.1.0",
+    "react-native-screens": "^3.4.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "^12.1.1",
     "react-string-replace": "^0.4.4",
     "zustand": "3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/plugin-proposal-decorators": "^7.13.15",
-    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
-    "@babel/runtime": "^7.13.10",
-    "@bam.tech/react-native-make": "^3.0.0",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/core": "^7.14.8",
+    "@babel/runtime": "^7.14.8",
+    "@bam.tech/react-native-make": "^3.0.3",
+    "@react-native-community/eslint-config": "^3.0.0",
     "@testing-library/jest-native": "^4.0.1",
-    "@testing-library/react-hooks": "^5.1.0",
+    "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/react-native": "^7.2.0",
     "@types/hoist-non-react-statics": "^3.3.1",
-    "@types/i18n-js": "^3.8.0",
-    "@types/jest": "^26.0.22",
-    "@types/react": "^17.0.3",
-    "@types/react-is": "^17.0.0",
-    "@types/react-native": "^0.64.1",
+    "@types/i18n-js": "^3.8.2",
+    "@types/jest": "^26.0.24",
+    "@types/react": "^17.0.14",
+    "@types/react-is": "^17.0.2",
+    "@types/react-native": "^0.64.12",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "babel-jest": "^26.6.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "babel-jest": "^27.0.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "detox": "^18.8.1",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-config-standard": "^16.0.2",
+    "detox": "^18.19.0",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-detox": "^1.0.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-native": "^3.10.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-native": "^3.11.0",
     "eslint-plugin-standard": "^5.0.0",
-    "jest": "^26.6.3",
-    "jest-circus": "^26.6.3",
+    "jest": "^27.0.6",
+    "jest-circus": "^27.0.6",
     "jest-fetch-mock": "^3.0.3",
     "jest-sonar": "^0.2.12",
     "metro-react-native-babel-preset": "^0.64.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
-    "ts-proto": "^1.76.0",
-    "ts-protoc-gen": "^0.14.0",
-    "typescript": "^4.2.3"
+    "ts-proto": "^1.82.2",
+    "ts-protoc-gen": "^0.15.0",
+    "typescript": "^4.3.5"
   }
 }
