--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -8,7 +8,7 @@ def shared_pods
   use_react_native!(
     :path => config[:reactNativePath],
     # To enable Hermes on iOS, change `false` to `true` and then install pods.
-    :hermes_enabled => false
+    :hermes_enabled => true
   )
 
   # Enables Flipper.
