--- a/template/package.json
+++ b/template/package.json
@@ -15,7 +15,6 @@
     "ra": "react-native run-android --variant stagingDebug --appId com.appstarter.staging",
     "ri": "react-native run-ios --scheme 'STAGING Debug'",
     "rca": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && cd .. && yarn ra",
-    "set-app-icon": "react-native set-icon --path",
     "apks": "yarn apk-staging && yarn apk-prod && yarn apk-prod-unsigned",
     "apk-staging": "npx jetify && cd ./android && ./gradlew assembleStagingRelease --stacktrace && open app/build/outputs/apk/staging/release && cd ..",
     "apk-prod": "npx jetify && cd ./android && ./gradlew assembleProdRelease --stacktrace && open app/build/outputs/apk/prod/release && cd ..",
@@ -52,18 +51,18 @@
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^6.0.0",
-    "@react-navigation/bottom-tabs": "^5.11.11",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/bottom-tabs": "^6.0.1",
+    "@react-navigation/native": "^6.0.1",
+    "@react-navigation/stack": "^6.0.1",
     "cross-fetch": "^3.1.4",
-    "date-fns": "^2.22.1",
+    "date-fns": "^2.23.0",
     "google-protobuf": "^3.17.3",
     "i18n-js": "^3.8.0",
     "immer": "^9.0.5",
     "mitt": "^2.1.0",
     "react": "17.0.2",
     "react-native": "^0.64.2",
-    "react-native-device-info": "^8.1.3",
+    "react-native-device-info": "^8.1.7",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-localize": "^2.1.1",
@@ -73,33 +72,33 @@
     "react-native-permissions": "^3.0.5",
     "react-native-reanimated": "^1.13.2",
     "react-native-redash": "^14.2.4",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0",
+    "react-native-safe-area-context": "^3.3.0",
+    "react-native-screens": "^3.5.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1",
     "react-string-replace": "^0.4.4",
     "zustand": "3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "^7.15.0",
     "@babel/runtime": "^7.14.8",
     "@react-native-community/eslint-config": "^3.0.0",
-    "@testing-library/jest-native": "^4.0.1",
+    "@testing-library/jest-native": "^4.0.2",
     "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/react-native": "^7.2.0",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/i18n-js": "^3.8.2",
     "@types/jest": "^26.0.24",
-    "@types/react": "^17.0.14",
+    "@types/react": "^17.0.16",
     "@types/react-is": "^17.0.2",
     "@types/react-native": "^0.64.12",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "babel-jest": "^27.0.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "detox": "^18.19.0",
-    "eslint": "^7.31.0",
+    "detox": "^18.20.1",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-detox": "^1.0.0",
@@ -119,8 +118,9 @@
     "prettier": "^2.3.2",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
-    "ts-proto": "^1.82.2",
-    "ts-protoc-gen": "^0.15.0",
     "typescript": "^4.3.5"
+  },
+  "resolutions": {
+    "react-native/@jest/create-cache-key-function": "^27.0.2"
   }
 }
