--- a/template/package.json
+++ b/template/package.json
@@ -46,79 +46,82 @@
   ],
   "dependencies": {
     "@colorfy-software/zfy": "^0.1.3",
-    "@react-native-async-storage/async-storage": "^1.15.5",
-    "@react-native-clipboard/clipboard": "^1.8.4",
-    "@react-native-community/hooks": "^2.6.0",
+    "@react-native-async-storage/async-storage": "^1.15.15",
+    "@react-native-clipboard/clipboard": "^1.9.0",
+    "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^6.0.0",
-    "@react-navigation/bottom-tabs": "^6.0.1",
-    "@react-navigation/native": "^6.0.1",
-    "@react-navigation/stack": "^6.0.1",
+    "@react-native-community/netinfo": "^7.1.7",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "cross-fetch": "^3.1.4",
-    "date-fns": "^2.23.0",
-    "google-protobuf": "^3.17.3",
+    "date-fns": "^2.28.0",
+    "google-protobuf": "^3.19.3",
     "i18n-js": "^3.8.0",
-    "immer": "^9.0.6",
-    "mitt": "^2.1.0",
+    "immer": "^9.0.12",
+    "mitt": "^3.0.0",
     "react": "17.0.2",
     "react-native": "^0.66.4",
-    "react-native-device-info": "^8.1.7",
+    "react-native-device-info": "^8.4.8",
     "react-native-encrypted-storage": "^4.0.2",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-localize": "^2.1.1",
-    "react-native-modalfy": "^2.1.2",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-localize": "^2.1.7",
+    "react-native-modalfy": "^2.1.3",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-parsed-text": "^0.0.22",
-    "react-native-permissions": "^3.0.5",
+    "react-native-permissions": "^3.2.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-redash": "^14.2.4",
-    "react-native-safe-area-context": "^3.3.0",
-    "react-native-screens": "^3.5.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1",
     "react-string-replace": "^0.4.4",
     "zustand": "3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/runtime": "^7.14.8",
-    "@react-native-community/eslint-config": "^3.0.0",
-    "@testing-library/jest-native": "^4.0.2",
-    "@testing-library/react-hooks": "^7.0.1",
-    "@testing-library/react-native": "^7.2.0",
+    "@babel/core": "^7.16.7",
+    "@babel/runtime": "^7.16.7",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react-native": "^9.0.0",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/i18n-js": "^3.8.2",
-    "@types/jest": "^26.0.24",
-    "@types/react": "^17.0.16",
-    "@types/react-is": "^17.0.2",
-    "@types/react-native": "^0.64.12",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-is": "^17.0.3",
+    "@types/react-native": "^0.66.12",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
-    "babel-jest": "^27.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "babel-jest": "^27.4.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "detox": "^18.20.1",
-    "eslint": "^7.32.0",
+    "detox": "^19.4.2",
+    "detox-recorder": "^1.0.151",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-detox": "^1.0.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-native": "^3.11.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-51947a14b-20220113",
+    "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "jest": "^27.0.6",
-    "jest-circus": "^27.0.6",
+    "jest": "^27.4.7",
+    "jest-circus": "^27.4.6",
     "jest-fetch-mock": "^3.0.3",
     "jest-sonar": "^0.2.12",
     "metro-react-native-babel-preset": "^0.66.2",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.3.2",
-    "react-native-svg-transformer": "^0.14.3",
+    "prettier": "2.5.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.4"
   },
   "resolutions": {
     "react-native/@jest/create-cache-key-function": "^27.0.2"
