Add support for DEV target 🥳

--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -32,6 +32,11 @@ target 'appStarter' do
   end
 end
 
+target 'DEV' do
+  shared_pods
+  inherit! :search_paths
+end
+
 target 'STAGING' do
   shared_pods
   inherit! :search_paths
