--- a/template/android/app/build.gradle
+++ b/template/android/app/build.gradle
@@ -170,6 +170,11 @@ android {
         }
     }
     productFlavors {
+        dev {
+            applicationId "com.appstarter.dev"
+            resValue "string", "app_name", "Starter Dev"
+        }
+
         staging {
             applicationId "com.appstarter.staging"
             resValue "string", "app_name", "Starter Staging"
