--- a/template/package.json
+++ b/template/package.json
@@ -1,106 +1,77 @@
 {
-  "name": "appStarter",
+  "name": "appstarter",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "android": "yarn ra",
-    "ios": "yarn ri",
-    "ts": "yarn tsc",
-    "unit": "yarn jest --updateSnapshot --verbose",
-    "start": "react-native start",
-    "test": "yarn lint && yarn ts && yarn unit && yarn detox-ci",
-    "test-commit": "yarn lint && yarn ts && yarn unit",
+    "start": "npx react-native start",
+    "android": "./build.sh run android dev",
+    "ios": "./build.sh run ios dev",
     "lint": "npx eslint '*/**/*.{js,ts,tsx}' --fix",
-    "sign-android": "sh ./scripts/generate-signed-android-keystore.sh",
-    "ra": "react-native run-android --variant stagingDebug --appId com.appstarter.staging",
-    "ri": "react-native run-ios --scheme 'STAGING Debug'",
-    "rca": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && cd .. && yarn ra",
-    "apks": "yarn apk-staging && yarn apk-prod && yarn apk-prod-unsigned",
-    "apk-staging": "npx jetify && cd ./android && ./gradlew assembleStagingRelease --stacktrace && open app/build/outputs/apk/staging/release && cd ..",
-    "apk-prod": "npx jetify && cd ./android && ./gradlew assembleProdRelease --stacktrace && open app/build/outputs/apk/prod/release && cd ..",
-    "apk-prod-unsigned": "npx jetify && yarn run bundle-android && cd ./android && ./gradlew assembleProdUnsigned --stacktrace && open app/build/outputs/apk/prod/unsigned && cd .. && yarn run clean-android",
-    "ipa-staging-unsigned": "scripts/build-unsigned-ipa.sh STAGING",
-    "ipa-prod-unsigned": "scripts/build-unsigned-ipa.sh PROD",
-    "run-android-staging": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && cd .. && yarn ra",
-    "run-android-prod": "cd ./android && ./gradlew clean && ./gradlew uninstallAll && cd .. && react-native run-android --variant prodDebug --appId com.appstarter.prod",
-    "run-ios-staging": "yarn ri",
-    "run-ios-prod": "react-native run-ios --scheme 'PROD Debug'",
-    "build-android-staging": "cd android && ./gradlew clean && ./gradlew uninstallAll && ./gradlew installStagingRelease && cd ..",
-    "build-android-prod": "cd android && ./gradlew clean && ./gradlew uninstallAll && ./gradlew installProdRelease && cd ..",
-    "bundle-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
-    "clean-android": "rm ./android/app/src/main/assets/index.android.bundle && rm -rf ./android/app/src/main/res/raw && rm -rf ./android/app/src/main/res/drawable-hdpi && rm -rf ./android/app/src/main/res/drawable-mdpi && rm -rf ./android/app/src/main/res/drawable-xhdpi && rm -rf ./android/app/src/main/res/drawable-xxhdpi && rm -rf ./android/app/src/main/res/drawable-xxxhdpi",
-    "clean-ios": "rm -rf ./ios/build/",
-    "detox-ci": "./scripts/run-detox-ci.sh",
-    "detox-ios-staging-debug": "detox build --configuration ios.staging.debug && detox test --configuration ios.staging.debug",
-    "detox-ios-staging-release": "detox build --configuration ios.staging.release && detox test --configuration ios.staging.release",
-    "detox-ios-prod-debug": "detox build --configuration ios.prod.debug && detox test --configuration ios.prod.debug",
-    "detox-ios-prod-release": "detox build --configuration ios.prod.release && detox test --configuration ios.prod.release",
-    "detox-android-staging-debug": "detox build --configuration android.staging.debug && detox test --configuration android.staging.debug",
-    "detox-android-staging-release": "detox build --configuration android.staging.release && detox test --configuration android.staging.release",
-    "detox-android-prod-debug": "detox build --configuration android.prod.debug && detox test --configuration android.prod.debug",
-    "detox-android-prod-release": "detox build --configuration android.prod.release && detox test --configuration android.prod.release",
-    "postinstall": "sh ./scripts/postinstall.sh"
+    "type": "yarn tsc",
+    "unit": "yarn jest --updateSnapshot --verbose",
+    "test": "yarn lint && yarn type && yarn unit && ./build.sh detox --ci",
+    "test-commit": "yarn lint && yarn type && yarn unit",
+    "postinstall": "./scripts/postinstall.sh"
   },
   "pre-commit": [
     "test-commit"
   ],
   "dependencies": {
-    "@colorfy-software/zfy": "^0.1.3",
-    "@react-native-async-storage/async-storage": "^1.15.15",
+    "@colorfy-software/zfy": "^1.0.0",
     "@react-native-clipboard/clipboard": "^1.9.0",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "^7.1.7",
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.11",
-    "cross-fetch": "^3.1.4",
+    "@react-native-community/netinfo": "^8.0.0",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
+    "cross-fetch": "^3.1.5",
     "date-fns": "^2.28.0",
-    "google-protobuf": "^3.19.3",
+    "google-protobuf": "^3.19.4",
     "i18n-js": "^3.8.0",
     "immer": "^9.0.12",
     "mitt": "^3.0.0",
     "react": "17.0.2",
-    "react-native": "^0.66.4",
-    "react-native-device-info": "^8.4.8",
-    "react-native-encrypted-storage": "^4.0.2",
+    "react-native": "^0.67.3",
+    "react-native-device-info": "^8.4.9",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.2.0",
-    "react-native-localize": "^2.1.7",
-    "react-native-modalfy": "^2.1.3",
+    "react-native-localize": "^2.2.0",
+    "react-native-mmkv": "^2.1.0",
+    "react-native-modalfy": "^3.0.1",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-parsed-text": "^0.0.22",
-    "react-native-permissions": "^3.2.0",
-    "react-native-reanimated": "^1.13.2",
-    "react-native-redash": "^14.2.4",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2",
-    "react-native-splash-screen": "^3.2.0",
+    "react-native-permissions": "^3.3.0",
+    "react-native-reanimated": "^2.4.1",
+    "react-native-safe-area-context": "^3.4.0",
+    "react-native-screens": "^3.12.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.1.1",
     "react-string-replace": "^0.4.4",
-    "zustand": "3.3.1"
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/runtime": "^7.16.7",
+    "@babel/core": "^7.17.5",
+    "@babel/runtime": "^7.17.2",
     "@react-native-community/eslint-config": "^3.0.1",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/react-native": "^9.0.0",
     "@types/hoist-non-react-statics": "^3.3.1",
     "@types/i18n-js": "^3.8.2",
-    "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.38",
+    "@types/jest": "^27.4.1",
+    "@types/react": "^17.0.39",
     "@types/react-is": "^17.0.3",
-    "@types/react-native": "^0.66.12",
+    "@types/react-native": "^0.67.0",
     "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "babel-jest": "^27.4.6",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "babel-jest": "^27.5.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "detox": "^19.4.2",
+    "detox": "^19.4.5",
     "detox-recorder": "^1.0.151",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-detox": "^1.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
@@ -108,12 +79,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-51947a14b-20220113",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "jest": "^27.4.7",
-    "jest-circus": "^27.4.6",
+    "jest": "^27.5.1",
+    "jest-circus": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
     "jest-sonar": "^0.2.12",
     "metro-react-native-babel-preset": "^0.66.2",
@@ -121,9 +92,6 @@
     "prettier": "2.5.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.5.4"
-  },
-  "resolutions": {
-    "react-native/@jest/create-cache-key-function": "^27.0.2"
+    "typescript": "^4.5.5"
   }
 }
